--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@
 }
 body{
   padding-top: -10px;
+  display: block;
+  margin: 8px;
 }
 h1 {
   margin-bottom: 50px;
   text-align: center;
   border:  1px solid black;  
   font-family: helvetica;
-
 }
  .type_1{
   background-color: #d0e4fe;
@@ -32,22 +33,23 @@ h2{
   border-bottom: 2px solid black;
   border-left: 2px solid black;
   font-family: helvetica;
-
   
 }
+div {
+  display: block;
+  background-color: #ddd;
+}
 ul {
-  background-color: #ddd;    
+  
   width: 100%;
   font-family: Times;
   color: black;
   float: left;
   list-style-type: none;
 }
-
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
-  
   
 
 }
@@ -68,7 +70,7 @@ ul {
     width: 16.66%;
   }
   .col-lg-3 {
-    width: 32.33%;
+    width: 32.1%;
   }
   .col-lg-4 {
     width: 33%;
@@ -124,7 +126,7 @@ ul {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 49%;
+    width: 48.5%;
   }
   .col-md-7 {
     width: 57.33%;
